--- a/benchmarks/setup/zell-state-runtime-empty/worker.yaml
+++ b/benchmarks/setup/zell-state-runtime-empty/worker.yaml
@@ -1,39 +1,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: starter
+  name: worker
   labels:
-    app: starter
+    app: worker
 spec:
   selector:
     matchLabels:
-      app: starter
-  replicas: 1
+      app: worker
+  replicas: 12
   template:
     metadata:
       labels:
-        app: starter
+        app: worker
     spec:
       containers:
-      - name: starter
-        image: gcr.io/zeebe-io/starter:zeebe
+      - name: worker
+        image: gcr.io/zeebe-io/worker:zeebe
         imagePullPolicy: Always
         env:
           - name: JAVA_OPTIONS
             value: >-
-              -Dapp.brokerUrl=zell-state-path-zeebe-gateway:26500
-              -Dapp.starter.rate=300
-              -Dapp.starter.durationLimit=0
+              -Dapp.brokerUrl=zell-state-runtime-empty-zeebe-gateway:26500
               -Dzeebe.client.requestTimeout=62000
+              -Dapp.worker.capacity=120
+              -Dapp.worker.pollingDelay=1ms
+              -Dapp.worker.completionDelay=50ms
               -XX:+HeapDumpOnOutOfMemoryError
           - name: LOG_LEVEL
             value: "warn"
         resources:
           limits:
-            cpu: 2
+            cpu: 4
             memory: 2Gi
           requests:
-            cpu: 2
+            cpu: 1
             memory: 512Mi
 ---
 apiVersion: v1
@@ -41,9 +42,9 @@ kind: Service
 metadata:
   labels:
     app: zeebe
-    app.kubernetes.io/instance: zell-state-path
+    app.kubernetes.io/instance: zell-state-runtime-empty
     app.kubernetes.io/name: zeebe-cluster
-  name: starter
+  name: worker
 spec:
   clusterIP: None
   ports:
@@ -53,7 +54,7 @@ spec:
     targetPort: 9600
   publishNotReadyAddresses: true
   selector:
-    app: starter
+    app: worker
   sessionAffinity: None
   type: ClusterIP
 status:
