--- a/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/charts/elasticsearch/templates/service.yaml
+++ b/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/charts/elasticsearch/templates/service.yaml
@@ -6,7 +6,7 @@ metadata:
   name: elasticsearch-master
   labels:
     heritage: "Helm"
-    release: "zell-state-path"
+    release: "zell-state-runtime-empty"
     chart: "elasticsearch"
     app: "elasticsearch-master"
   annotations:
@@ -15,7 +15,7 @@ spec:
   type: ClusterIP
   selector:
     heritage: "Helm"
-    release: "zell-state-path"
+    release: "zell-state-runtime-empty"
     chart: "elasticsearch"
     app: "elasticsearch-master"
   ports:
@@ -33,7 +33,7 @@ metadata:
   name: elasticsearch-master-headless
   labels:
     heritage: "Helm"
-    release: "zell-state-path"
+    release: "zell-state-runtime-empty"
     chart: "elasticsearch"
     app: "elasticsearch-master"
   annotations:
