--- a/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/templates/gateway-deployment.yaml
+++ b/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/templates/gateway-deployment.yaml
@@ -3,10 +3,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "zell-state-path-zeebe-gateway"
+  name: "zell-state-runtime-empty-zeebe-gateway"
   labels:
     app.kubernetes.io/name: zeebe-cluster
-    app.kubernetes.io/instance: zell-state-path
+    app.kubernetes.io/instance: zell-state-runtime-empty
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: gateway
   annotations:
@@ -15,21 +15,21 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: zeebe-cluster
-      app.kubernetes.io/instance: zell-state-path
+      app.kubernetes.io/instance: zell-state-runtime-empty
       app.kubernetes.io/managed-by: Helm
       app.kubernetes.io/component: gateway
   template:
     metadata:
       labels:
         app.kubernetes.io/name: zeebe-cluster
-        app.kubernetes.io/instance: zell-state-path
+        app.kubernetes.io/instance: zell-state-runtime-empty
         app.kubernetes.io/managed-by: Helm
         app.kubernetes.io/component: gateway
       annotations:
     spec:
       containers:
         - name: zeebe-cluster
-          image: "gcr.io/zeebe-io/zeebe:zell-state-path"
+          image: "camunda/zeebe:SNAPSHOT"
           imagePullPolicy: Always
           ports:
             - containerPort: 9600
@@ -42,7 +42,7 @@ spec:
             - name: ZEEBE_STANDALONE_GATEWAY
               value: "true"
             - name: ZEEBE_GATEWAY_CLUSTER_CLUSTERNAME
-              value: zell-state-path-zeebe
+              value: zell-state-runtime-empty-zeebe
             - name: ZEEBE_GATEWAY_CLUSTER_MEMBERID
               valueFrom:
                 fieldRef:
@@ -52,7 +52,7 @@ spec:
             - name: JAVA_TOOL_OPTIONS
               value: "-XX:MaxRAMPercentage=25.0 -XX:+ExitOnOutOfMemoryError -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/usr/local/zeebe/data -XX:ErrorFile=/usr/local/zeebe/data/zeebe_error%p.log -Xlog:gc*:file=/usr/local/zeebe/data/gc.log:time:filecount=7,filesize=8M"
             - name: ZEEBE_GATEWAY_CLUSTER_CONTACTPOINT
-              value: zell-state-path-zeebe:26502
+              value: zell-state-runtime-empty-zeebe:26502
             - name: ZEEBE_GATEWAY_NETWORK_HOST
               value: 0.0.0.0
             - name: ZEEBE_GATEWAY_NETWORK_PORT
@@ -101,5 +101,5 @@ spec:
       volumes:
         - name: config
           configMap:
-            name: zell-state-path-zeebe-cluster
+            name: zell-state-runtime-empty-zeebe-cluster
             defaultMode: 0744
