--- a/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/templates/service-monitor.yaml
+++ b/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/templates/service-monitor.yaml
@@ -3,17 +3,17 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: zell-state-path-zeebe-cluster
+  name: zell-state-runtime-empty-zeebe-cluster
   labels:
     app.kubernetes.io/name: zeebe-cluster
-    app.kubernetes.io/instance: zell-state-path
+    app.kubernetes.io/instance: zell-state-runtime-empty
     app.kubernetes.io/managed-by: Helm
     release: metrics
 spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: zeebe-cluster
-      app.kubernetes.io/instance: zell-state-path
+      app.kubernetes.io/instance: zell-state-runtime-empty
       app.kubernetes.io/managed-by: Helm
   endpoints:
     - honorLabels: true
