--- a/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/templates/service.yaml
+++ b/benchmarks/setup/zell-state-runtime-empty/zeebe-cluster/templates/service.yaml
@@ -3,10 +3,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "zell-state-path-zeebe"
+  name: "zell-state-runtime-empty-zeebe"
   labels:
     app.kubernetes.io/name: zeebe-cluster
-    app.kubernetes.io/instance: zell-state-path
+    app.kubernetes.io/instance: zell-state-runtime-empty
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: broker
     app: zeebe
@@ -28,6 +28,6 @@ spec:
       name: command
   selector:
     app.kubernetes.io/name: zeebe-cluster
-    app.kubernetes.io/instance: zell-state-path
+    app.kubernetes.io/instance: zell-state-runtime-empty
     app.kubernetes.io/managed-by: Helm
     app.kubernetes.io/component: broker
