--- a/atomix/cluster/pom.xml
+++ b/atomix/cluster/pom.xml
@@ -154,6 +154,12 @@
       <artifactId>jqwik-api</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.zeebe</groupId>
+      <artifactId>journal</artifactId>
+      <version>0.27.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <modelVersion>4.0.0</modelVersion>
