--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -71,7 +71,7 @@
 
       <dependency>
         <groupId>io.zeebe</groupId>
-        <artifactId>zeebe-process-engine</artifactId>
+        <artifactId>zeebe-workflow-engine</artifactId>
         <version>${project.version}</version>
       </dependency>
 
