--- a/qa/integration-tests/pom.xml
+++ b/qa/integration-tests/pom.xml
@@ -24,7 +24,7 @@
 
     <dependency>
       <groupId>io.zeebe</groupId>
-      <artifactId>zeebe-process-engine</artifactId>
+      <artifactId>zeebe-workflow-engine</artifactId>
     </dependency>
 
     <dependency>
