--- a/.ci/podSpecs/integration-test-template.yml
+++ b/.ci/podSpecs/integration-test-template.yml
@@ -41,7 +41,8 @@ spec:
       args:
         - --storage-driver=overlay
         - --ipv6
-        - --fixed-cidr-v6 "2001:db8:1::/64"
+        - --fixed-cidr-v6
+        - "2001:db8:1::/64"
       env:
         # The new dind versions expect secure access using cert
         # Setting DOCKER_TLS_CERTDIR to empty string will disable the secure access
